[project]
name = "nanobanana-cleaner"
version = "0.1.0"
description = "a lightweight and fast Python tool for removing backgrounds from AI-generated images and adding transparency channels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
